--- a/src/xmltocsvparser/view/RootLayout.fxml
+++ b/src/xmltocsvparser/view/RootLayout.fxml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.BorderPane?>
-
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+            minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60"
+            fx:controller="xmltocsvparser.view.RootLayoutController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
+                <MenuItem mnemonicParsing="false" text="Load new files"/>
+                <MenuItem mnemonicParsing="false" text="Load additional files"/>
+                <MenuItem fx:id="readSchema" mnemonicParsing="false" onAction="#readSchemaButtonPressed"
+                          text="Load schema"/>
+                <MenuItem mnemonicParsing="false" text="Exit"/>
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
