--- a/src/xmltocsvparser/view/SchemaSelectionWindow.fxml
+++ b/src/xmltocsvparser/view/SchemaSelectionWindow.fxml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Tooltip?>
-<?import javafx.scene.control.TreeView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
-
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="xmltocsvparser.view.LeftTreeController">
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+            minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.60"
+            fx:controller="xmltocsvparser.view.SchemaSelectionWindowController">
    <children>
       <BorderPane layoutX="32.0" layoutY="33.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
-            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+             <VBox alignment="CENTER" prefHeight="400.0" prefWidth="118.0" BorderPane.alignment="CENTER">
                <children>
                   <Button fx:id="add" mnemonicParsing="false" onAction="#addButtonPressed" text="&gt;&gt;">
                      <tooltip>
@@ -24,25 +20,57 @@
                         <Tooltip text="Removes the selected Nodes from the Schema" />
                      </tooltip>
                   </Button>
-                  <Button fx:id="confirm" mnemonicParsing="false" text="Confirm" />
+                   <Button fx:id="confirm" mnemonicParsing="false" onAction="#confirmButtonPressed" text="Confirm"/>
                </children>
             </VBox>
          </center>
          <left>
-            <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
-               <children>
-                  <Label fx:id="leftLabel" alignment="CENTER" text="Label" />
-                  <TreeView fx:id="leftTreeView" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS" />
-               </children>
-            </VBox>
+             <SplitPane dividerPositions="0.0829145728643216" orientation="VERTICAL" prefHeight="400.0"
+                        prefWidth="253.0"
+                        BorderPane.alignment="CENTER">
+                 <items>
+                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                         <children>
+                             <Label fx:id="leftLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="99.0"
+                                    layoutY="7.0"
+                                    prefHeight="30.0" prefWidth="226.0" text="Label" AnchorPane.bottomAnchor="0.0"
+                                    AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+                                    AnchorPane.topAnchor="0.0"/>
+                         </children>
+                     </AnchorPane>
+                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                         <children>
+                             <TreeView fx:id="leftTreeView" layoutX="13.0" layoutY="48.0" prefHeight="362.0"
+                                       prefWidth="226.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                                       AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
+                         </children>
+                     </AnchorPane>
+                 </items>
+             </SplitPane>
          </left>
          <right>
-            <VBox alignment="TOP_CENTER" prefHeight="375.0" prefWidth="270.0" BorderPane.alignment="CENTER">
-               <children>
-                  <Label fx:id="rightLabel" text="Label" />
-                  <TreeView fx:id="rightTreeView" />
-               </children>
-            </VBox>
+             <SplitPane dividerPositions="0.0829145728643216" orientation="VERTICAL" prefHeight="400.0"
+                        prefWidth="249.0"
+                        BorderPane.alignment="CENTER">
+                 <items>
+                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                         <children>
+                             <Label fx:id="rightLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="99.0"
+                                    layoutY="7.0" prefHeight="30.0" prefWidth="226.0" text="Label"
+                                    AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                                    AnchorPane.rightAnchor="0.0"
+                                    AnchorPane.topAnchor="0.0"/>
+                         </children>
+                     </AnchorPane>
+                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                         <children>
+                             <TreeView fx:id="rightTreeView" layoutX="13.0" layoutY="48.0" prefHeight="362.0"
+                                       prefWidth="226.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                                       AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
+                         </children>
+                     </AnchorPane>
+                 </items>
+             </SplitPane>
          </right>
       </BorderPane>
    </children>
