--- a/src/xmltocsvparser/view/start.fxml
+++ b/src/xmltocsvparser/view/start.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
@@ -22,8 +21,9 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
             </rowConstraints>
             <children>
-                <Button fx:id="tutorial" mnemonicParsing="false" prefHeight="48.0" prefWidth="142.0" text="Tutorial"
-                        GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2"/>
+                <Button fx:id="tutorial" mnemonicParsing="false" onAction="#tutorialButtonPressed" prefHeight="48.0"
+                        prefWidth="142.0" text="Tutorial" GridPane.columnIndex="1" GridPane.halignment="CENTER"
+                        GridPane.rowIndex="2"/>
                 <Button fx:id="loadXML" mnemonicParsing="false" onAction="#loadXMLButtonPressed" prefHeight="48.0"
                         prefWidth="142.0" text="Load XML" GridPane.columnIndex="1" GridPane.halignment="CENTER"
                         GridPane.rowIndex="3"/>
