--- a/src/xmltocsvparser/view/RootLayout.fxml
+++ b/src/xmltocsvparser/view/RootLayout.fxml
@@ -1,36 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.*?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-            minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60"
+            minWidth="-Infinity" prefHeight="420.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60"
             fx:controller="xmltocsvparser.view.RootLayoutController">
    <top>
-      <MenuBar BorderPane.alignment="CENTER">
-        <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
-                <MenuItem mnemonicParsing="false" onAction="#handleNew" text="Load new files"/>
-                <MenuItem mnemonicParsing="false" onAction="#handleAdditionalFiles" text="Load additional files"/>
-                <MenuItem fx:id="readSchema" mnemonicParsing="false" onAction="#readSchemaButtonPressed"
-                          text="Load schema"/>
-                <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit"/>
-            </items>
-          </Menu>
-            <Menu mnemonicParsing="false" onAction="#handleSettings" text="Preferences">
-                <items>
-                    <MenuItem mnemonicParsing="false" onAction="#handleSettings" text="Settings"/>
-                    <MenuItem mnemonicParsing="false" onAction="#handleReset" text="Reset Application"/>
-                </items>
-            </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-                <MenuItem mnemonicParsing="false" onAction="#handleHelp" text="XML Parser Help"/>
-                <MenuItem mnemonicParsing="false" onAction="#handleTutorial" text="Tutorial"/>
-                <MenuItem mnemonicParsing="false" onAction="#handleAbout" text="About"/>
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
+       <GridPane prefHeight="45.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+           <columnConstraints>
+               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+           </columnConstraints>
+           <rowConstraints>
+               <RowConstraints maxHeight="38.0" minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES"/>
+               <RowConstraints maxHeight="38.0" minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES"/>
+               <RowConstraints maxHeight="29.0" minHeight="0.0" prefHeight="11.0" vgrow="SOMETIMES"/>
+           </rowConstraints>
+           <children>
+               <MenuBar prefHeight="22.0" prefWidth="601.0" GridPane.valignment="TOP">
+                   <menus>
+                       <Menu mnemonicParsing="false" text="File">
+                           <items>
+                               <MenuItem mnemonicParsing="false" onAction="#handleNew" text="Load new files"/>
+                               <MenuItem mnemonicParsing="false" onAction="#handleAdditionalFiles"
+                                         text="Load additional files"/>
+                               <MenuItem fx:id="readSchema" mnemonicParsing="false" onAction="#readSchemaButtonPressed"
+                                         text="Load schema"/>
+                               <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit"/>
+                           </items>
+                       </Menu>
+                       <Menu mnemonicParsing="false" onAction="#handleSettings" text="Preferences">
+                           <items>
+                               <MenuItem mnemonicParsing="false" onAction="#handleSettings" text="Settings"/>
+                               <MenuItem mnemonicParsing="false" onAction="#handleReset" text="Reset Application"/>
+                           </items>
+                       </Menu>
+                       <Menu mnemonicParsing="false" text="Help">
+                           <items>
+                               <MenuItem mnemonicParsing="false" onAction="#handleHelp" text="XML Parser Help"/>
+                               <MenuItem mnemonicParsing="false" onAction="#handleTutorial" text="Tutorial"/>
+                               <MenuItem mnemonicParsing="false" onAction="#handleAbout" text="About"/>
+                           </items>
+                       </Menu>
+                   </menus>
+               </MenuBar>
+               <Pane prefHeight="17.0" prefWidth="605.0" GridPane.rowIndex="1"/>
+           </children>
+       </GridPane>
    </top>
 </BorderPane>
