--- a/src/xmltocsvparser/view/SchemaSelectionWindow.fxml
+++ b/src/xmltocsvparser/view/SchemaSelectionWindow.fxml
@@ -25,23 +25,21 @@
             </VBox>
          </center>
          <left>
-             <SplitPane dividerPositions="0.0829145728643216" orientation="VERTICAL" prefHeight="400.0"
-                        prefWidth="253.0"
+             <SplitPane dividerPositions="0.0628" orientation="VERTICAL" prefHeight="400.0" prefWidth="253.0"
                         BorderPane.alignment="CENTER">
                  <items>
-                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="26.0" prefWidth="251.0">
                          <children>
                              <Label fx:id="leftLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="99.0"
-                                    layoutY="7.0"
-                                    prefHeight="30.0" prefWidth="226.0" text="Label" AnchorPane.bottomAnchor="0.0"
-                                    AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                                    AnchorPane.topAnchor="0.0"/>
+                                    layoutY="7.0" prefHeight="18.0" prefWidth="251.0" text="Label"
+                                    AnchorPane.bottomAnchor="-2.0" AnchorPane.leftAnchor="0.0"
+                                    AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
                          </children>
                      </AnchorPane>
                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                          <children>
-                             <TreeView fx:id="leftTreeView" layoutX="13.0" layoutY="48.0" prefHeight="362.0"
-                                       prefWidth="226.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                             <TreeView fx:id="leftTreeView" layoutX="-40.0" layoutY="32.0" prefHeight="368.0"
+                                       prefWidth="251.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
                                        AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
                          </children>
                      </AnchorPane>
@@ -49,8 +47,7 @@
              </SplitPane>
          </left>
          <right>
-             <SplitPane dividerPositions="0.0829145728643216" orientation="VERTICAL" prefHeight="400.0"
-                        prefWidth="249.0"
+             <SplitPane dividerPositions="0.0628" orientation="VERTICAL" prefHeight="400.0" prefWidth="249.0"
                         BorderPane.alignment="CENTER">
                  <items>
                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
@@ -58,8 +55,7 @@
                              <Label fx:id="rightLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="99.0"
                                     layoutY="7.0" prefHeight="30.0" prefWidth="226.0" text="Label"
                                     AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                                    AnchorPane.rightAnchor="0.0"
-                                    AnchorPane.topAnchor="0.0"/>
+                                    AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
                          </children>
                      </AnchorPane>
                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
