--- a/src/xmltocsvparser/view/matchSchema.fxml
+++ b/src/xmltocsvparser/view/matchSchema.fxml
@@ -30,8 +30,8 @@
                 </VBox>
             </center>
             <left>
-                <SplitPane dividerPositions="0.0829145728643216" orientation="VERTICAL" prefHeight="400.0"
-                           prefWidth="253.0" BorderPane.alignment="CENTER">
+                <SplitPane dividerPositions="0.0628" orientation="VERTICAL" prefHeight="400.0" prefWidth="253.0"
+                           BorderPane.alignment="CENTER">
                     <items>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                             <children>
@@ -52,8 +52,8 @@
                 </SplitPane>
             </left>
             <right>
-                <SplitPane dividerPositions="0.0829145728643216" orientation="VERTICAL" prefHeight="400.0"
-                           prefWidth="249.0" BorderPane.alignment="CENTER">
+                <SplitPane dividerPositions="0.0628" orientation="VERTICAL" prefHeight="400.0" prefWidth="249.0"
+                           BorderPane.alignment="CENTER">
                     <items>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                             <children>
